environments/staging/my-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: microservices.info
    http:
      paths:
      - path: /users
        backend:
          serviceName: users
          servicePort: 8080
      - path: /albums
        backend:
          serviceName: albums
          servicePort: 8080
      - path: /accounts
        backend:
          serviceName: accounts
          servicePort: 8080
